[gd_scene load_steps=32 format=2]

[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante1.png" type="Texture" id=1]
[ext_resource path="res://scripts/inimigos/aranha_gigante.gd" type="Script" id=2]
[ext_resource path="res://sprites/efeitos_jogo/2DLight.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante3.png" type="Texture" id=16]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante2.png" type="Texture" id=17]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante4.png" type="Texture" id=18]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante7.png" type="Texture" id=19]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante15.png" type="Texture" id=20]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante17.png" type="Texture" id=21]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante21.png" type="Texture" id=22]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante20.png" type="Texture" id=23]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante19.png" type="Texture" id=24]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante16.png" type="Texture" id=25]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante12.png" type="Texture" id=26]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante10.png" type="Texture" id=27]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante14.png" type="Texture" id=28]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante13.png" type="Texture" id=29]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante18.png" type="Texture" id=30]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante5.png" type="Texture" id=31]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante6.png" type="Texture" id=33]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante9.png" type="Texture" id=34]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante11.png" type="Texture" id=35]
[ext_resource path="res://sprites/inimigos/aranha_gigante/aranha_gugante8.png" type="Texture" id=36]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 19 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 27 ), ExtResource( 35 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 20 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 30 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.9984, 5.46368 )

[sub_resource type="Animation" id=3]
length = 1.9
loop = true

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.678431 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.87361, 2.42902 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18.7746, 7.59486 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 0.802494, 3.33741 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1.26117, 2.34721 )

[node name="aranha_gigante" type="KinematicBody2D"]
rotation = -1.5708
z_index = 5
collision_layer = 2
collision_mask = 105
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="shape" type="CollisionShape2D" parent="."]
light_mask = 32
position = Vector2( -0.712929, 6.39281 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.574524, 0.928074 )
scale = Vector2( 0.535961, 0.429895 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/gosma_andando = SubResource( 3 )
anims/planeta_rosa = SubResource( 4 )

[node name="pisar_no_inimigo" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="pisar_no_inimigo"]
position = Vector2( -0.157478, -4.25223 )
shape = SubResource( 5 )
disabled = true

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )

[node name="colidir_com_player" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="colidir_com_player"]
visible = false
position = Vector2( -0.445946, 7.58119 )
shape = SubResource( 6 )

[node name="colidir_direita" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 64

[node name="FloorDetectorRight" type="CollisionShape2D" parent="colidir_direita"]
position = Vector2( 19.8683, 6.21241 )
shape = SubResource( 7 )

[node name="colidir_esquerda" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 64

[node name="FloorDetectorLeft" type="CollisionShape2D" parent="colidir_esquerda"]
position = Vector2( -22.2685, 6.7409 )
shape = SubResource( 8 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 1, 0.51608 )
texture = ExtResource( 3 )
texture_scale = 0.2
color = Color( 0.0470588, 0.313726, 0.94902, 0.294118 )
energy = 3.0
shadow_enabled = true
shadow_color = Color( 0.0509804, 0.0470588, 0.0470588, 0 )
shadow_gradient_length = 5.0

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="body_entered" from="pisar_no_inimigo" to="." method="pisar_no_inimigo"]
[connection signal="body_entered" from="colidir_com_player" to="." method="_on_enemy_body_entered"]
[connection signal="body_entered" from="colidir_direita" to="." method="_on_colidir_direita_body_entered"]
[connection signal="body_entered" from="colidir_esquerda" to="." method="_on_colidir_esquerda_body_entered"]
